[gd_scene load_steps=4 format=3 uid="uid://ck8sg3at7yihl"]

[ext_resource type="Script" uid="uid://bck8g1xo6ajx1" path="res://Scripts/fecha.gd" id="1_daerg"]
[ext_resource type="FontFile" uid="uid://jqjuimpqswj8" path="res://Imagens/alegreya-sc/AlegreyaSC-Regular.ttf" id="2_ri4xc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2tf6"]
size = Vector2(301.1, 146.19)

[node name="Fecha" type="Area2D"]
script = ExtResource("1_daerg")
metadata/Lugar = "primeiro_piso"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(80.6014, 34.448)
shape = SubResource("RectangleShape2D_r2tf6")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -57.9928
offset_top = -1.35311
offset_right = 220.007
offset_bottom = 68.6469
rotation = 0.00654254
theme_override_colors/font_color = Color(0.558604, 0.0380295, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ri4xc")
theme_override_font_sizes/font_size = 45
text = "Fechar Porta"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
